# imgs517

./: README.md  main.tex
code/: dataclass_python_class.py  dataclass_python_class_with_post_init.py  pydantic_python_class.py  pydantic_python_class_refactored.py  simple_python_class.py  simple_python_class_with_getters_setters_classic.py  simple_python_class_with_getters_setters_with_attributes_bad.py  simple_python_class_with_getters_setters_with_attributes_better.py  simple_python_class_with_getters_setters_with_attributes_worse.py
code/graybody/: README.md  pyproject.toml
code/graybody/graybody/: __init__.py
code/graybody/tests/: conftest.py  test_api_types_shapes.py  test_blackbody_core.py  test_graybody.py  test_graybody_core.py  test_physics_sanity.py
code/primes/: CMakeLists.txt  LICENSE  README.md  pyproject.toml
code/primes/primes/: __init__.py
code/primes/src/: bindings.cpp  primes.cpp  primes.h  primes_module.cpp
code/primes/tests/: nth_prime_comparison.py
sections/: classes.tex  inheritance.tex  modules.tex  pybind.tex  pytest.tex  python_basics.tex
