[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.11", "cmake>=3.18", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "primes"
version = "0.1.0"
description = "Prime utilities implemented in C++ with pybind11"
requires-python = ">=3.9"

[tool.scikit-build]
# Put the compiled extension into the Python package dir
wheel.packages = ["primes"]
